Reorganizing.. fixing ref bugs

--- a/app.html
+++ b/app.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Meta-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link href="Styles/App.css" rel="stylesheet" type="text/css">
-        <script src="Libraries/jQuery.js"></script>
-        <script src="Libraries/KRPano.min.js"></script>
-        <script src="Libraries/Pano.js"></script>
-        <script src="Libraries/Game.js"></script>
-        <script src="Libraries/Start.js"></script>
+        <!--Styles-->
+        <link href="styles/app.css" rel="stylesheet" type="text/css">
+        <!--Scripts-->
+        <script src="engine/jquery.js"></script>
+        <script src="engine/krpano.min.js"></script>
+        <script src="engine/pano.js"></script>
+        <script src="engine/game.js"></script>
+        <script src="engine/start.js"></script>
     </head>
 </html>
