Adding icons, libs, high-res pics, refactoring, etc. etc.

--- a/app.html
+++ b/app.html
@@ -9,6 +9,9 @@
         <!--Scripts-->
         <script src="engine/jquery.js"></script>
         <script src="engine/krpano.min.js"></script>
+        <script src="engine/pixastic/pixastic.core.js"></script>
+        <script src="engine/pixastic/pixastic.jquery.js"></script>
+        <script src="engine/pixastic/actions/sharpen.js"></script>
         <script src="engine/pano.js"></script>
         <script src="engine/game.js"></script>
         <script src="engine/start.js"></script>
